<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/event_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_mid_margin"
        android:contentDescription="@string/event_image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/birthday" />

    <TextView
        android:id="@+id/event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/event_name"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/event_attendees_amount"
        app:layout_constraintStart_toEndOf="@+id/event_image"
        app:layout_constraintTop_toTopOf="@+id/event_image" />

    <TextView
        android:id="@+id/event_attendees_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_attendees_amount"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/event_date"
        app:layout_constraintStart_toStartOf="@+id/event_name"
        app:layout_constraintTop_toBottomOf="@+id/event_name" />

    <TextView
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_date"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/event_image"
        app:layout_constraintStart_toStartOf="@+id/event_attendees_amount"
        app:layout_constraintTop_toBottomOf="@+id/event_attendees_amount" />

    <TextView
        android:id="@+id/event_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/event_time"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/event_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/event_date" />


</androidx.constraintlayout.widget.ConstraintLayout>