<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDetailActivity">

    <TextView
        android:id="@+id/event_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Moscow, Kremlin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/event_detail_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_location"
        app:srcCompat="@drawable/celebration" />

    <TextView
        android:id="@+id/event_date_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date and time"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/event_date_time_value"
        app:layout_constraintEnd_toStartOf="@+id/event_detail_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_location" />

    <TextView
        android:id="@+id/event_attendees_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Attendees amount"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/event_attendees_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/event_detail_image"
        app:layout_constraintTop_toBottomOf="@+id/event_location" />

    <TextView
        android:id="@+id/event_date_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="26.11.2019 at 11:00"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintEnd_toEndOf="@+id/event_date_time_label"
        app:layout_constraintStart_toStartOf="@+id/event_date_time_label"
        app:layout_constraintTop_toBottomOf="@+id/event_date_time_label" />

    <TextView
        android:id="@+id/event_attendees_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintEnd_toEndOf="@+id/event_attendees_label"
        app:layout_constraintStart_toStartOf="@+id/event_attendees_label"
        app:layout_constraintTop_toBottomOf="@+id/event_attendees_label" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_image">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_fragment" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendees_fragment" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchases_fragment" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/event_viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>